--- a/src/main/webapp/app/modules/home/home.scss
+++ b/src/main/webapp/app/modules/home/home.scss
@@ -1,126 +1,73 @@
-.home-page {
+.home-wrapper {
   background-image: url('/content/images/fondoHome.jpg');
   background-size: cover;
   background-position: center;
-  background-repeat: no-repeat;
-  min-height: calc(100vh - (40px + 160px));
+  min-height: 100vh;
   display: flex;
-  align-items: center;
   justify-content: center;
-  padding: 1rem;
+  align-items: center;
+}
 
-  .btn-google {
-    background-color: #ffffff;
-    color: #000;
-    border: 1px solid #ddd;
-    font-weight: bold;
+.home-container {
+  background-color: rgba(0, 0, 0, 0.5);
+  padding: 10px;
+  border-radius: 1rem;
+  width: 250px;
+  height: 350px;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+  color: white;
+  font-size: 12px;
+}
 
-    &:hover {
-      background-color: #f1f1f1;
-    }
+.home-content {
+  display: flex;
+  flex-direction: column;
+}
 
-    svg {
-      color: #db4437; // Color oficial de Google
-    }
-  }
+.app-title {
+  font-size: 18px;
+  text-align: center;
+  margin-bottom: 10px;
+  color: white;
+  font-weight: bold;
+}
 
-  .btn-facebook {
-    background-color: #3b5998;
-    color: #fff;
-    font-weight: bold;
-    border: none;
+.login-form input {
+  font-size: 12px;
+  padding: 5px;
+  border-radius: 8px;
+}
 
-    &:hover {
-      background-color: #2d4373;
-    }
+.btn-google {
+  background-color: #db4437;
+  color: white;
+  border-radius: 8px;
+  font-size: 14px;
+}
 
-    svg {
-      color: #fff;
-    }
-  }
+.btn-facebook {
+  background-color: #3b5998;
+  color: white;
+  border-radius: 8px;
+  font-size: 14px;
+}
 
-  .home-content {
-    background-color: rgba(0, 0, 0, 0.5);
-    color: white;
-    padding: 2rem;
-    border-radius: 10px;
-    max-width: 400px;
-    width: 100%;
-    text-align: center;
-    max-height: 480px;
-    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.6);
-
-    .app-title {
-      font-size: 18px;
-      margin-bottom: 1rem;
-      font-weight: bold;
-    }
-
-    .alert {
-      margin-top: 1rem;
-      background-color: rgba(154, 147, 147, 0.2);
-      border: none;
-      color: white;
-      max-width: 50%;
-
-      a {
-        color: #ffd700;
-        font-weight: bold;
-      }
-    }
-
-    .login-form {
-      text-align: left;
-
-      label {
-        color: #fff;
-        font-weight: 600;
-      }
-      .form-control {
-        background-color: #fff;
-      }
-      input {
-        background-color: rgba(255, 255, 255, 0.1);
-        color: white;
-        border: none;
-        border-radius: 5px;
-        padding: 10px;
-        margin-bottom: 1rem;
-
-        &:focus {
-          background-color: rgba(255, 255, 255, 0.2);
-          outline: none;
-          box-shadow: 0 0 5px #ffd700;
-        }
-      }
-
-      button {
-        background-color: #ffd700;
-        color: #000;
-        border: none;
-        font-weight: bold;
-        width: 100%;
-        padding: 10px;
-        margin-top: 1rem;
-        border-radius: 5px;
-
-        &:hover {
-          background-color: #e6c200;
-        }
-      }
-    }
-
-    .text-center {
-      margin-top: 1.5rem;
-
-      a {
-        color: #ffd700;
-        font-weight: bold;
-
-        &:hover {
-          text-decoration: underline;
-        }
-      }
-    }
-  }
+.btn-google:hover,
+.btn-primary:hover,
+.btn-facebook:hover {
+  opacity: 0.7;
+}
+.btn-primary {
+  background-color: rgb(7, 136, 61) !important;
+  border-radius: 5px;
+  border-color: rgb(7, 136, 61) !important;
+}
+.btn-warning {
+  border-radius: 5px !important;
+}
+.btn-info {
+  border-radius: 5px !important;
+}
+.btn-danger {
+  border-radius: 5px;
 }
