--- a/src/main/webapp/app/shared/layout/footer/footer.scss
+++ b/src/main/webapp/app/shared/layout/footer/footer.scss
@@ -1,13 +1,14 @@
 .footer {
   background-color: #232323; /* Fondo oscuro */
   color: #ffffff; /* Texto blanco */
-  padding: 20px 0;
-  font-size: 14px;
+  padding: 10px;
+  font-size: 10px;
   border-top: 1px solid #444; /* Línea superior sutil */
   position: fixed;
   bottom: 0;
   width: 100%;
   text-align: center;
+  height: 60;
 
   .footer-content {
     display: flex;
@@ -17,7 +18,7 @@
   }
 
   .footer-link {
-    color: #f8d47b; /* Color de enlace */
+    color: #f8d47b;
     text-decoration: none;
     font-weight: bold;
 
@@ -28,41 +29,33 @@
   }
 
   .social-links {
-    margin-top: 10px;
     display: flex;
     justify-content: center;
-    gap: 15px;
 
     .social-link {
       color: #ffffff;
       text-decoration: none;
-      font-size: 16px;
+      font-size: 12px;
       display: flex;
       align-items: center;
-      gap: 5px;
 
       &:hover {
         color: #f1c40f;
       }
 
       i {
-        font-size: 18px; /* Tamaño de los íconos */
+        font-size: 10px; /* Tamaño de los íconos */
       }
     }
-  }
-
-  .footer p {
-    margin: 5px 0;
   }
 }
 
 @media (max-width: 768px) {
   .footer {
-    font-size: 12px; /* Ajuste para pantallas pequeñas */
+    font-size: 10px; /* Ajuste para pantallas pequeñas */
   }
 
   .social-links {
     flex-direction: column;
-    gap: 10px;
   }
 }
